Corrected display of total cost and weight

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -628,8 +628,8 @@
 										<td style="width: 1em;"><span>{{item.data.data.tl}}</span></td>
 										<td style="width: 1em;"><span>{{item.data.data.lc}}</span></td>
 										<td style="width: 1.5em;"><span>{{item.data.data.quantity}}</span></td>
-										<td style="text-align: center;"><span>{{round item.data.data.cost 100}}</span></td>
-										<td style="text-align: center;"><span>{{round item.data.data.weight 100}}</span></td>
+										<td style="text-align: center;"><span>{{round item.data.data.ttlCost 100}}</span></td>
+										<td style="text-align: center;"><span>{{round item.data.data.ttlWeight 100}}</span></td>
 										<td style="width: 62px;"><span>{{item.data.data.equipStatus}}</span></td>
 										<td class="item-controls" style="width: 30px;">
 											<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
