--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1836,5 +1836,5 @@ attribute-senses {
 	border: black 1px solid;
 	border-radius: 5px;
 	padding: 2px 8px;
-	background: rgb(100 100 100/ 25%);
+	background: rgb(63 255 0);
 }
